--- a/front-end/src/assets/css/style.css
+++ b/front-end/src/assets/css/style.css
@@ -2165,7 +2165,7 @@ template {
   text-align: center;
   font-weight: bold;
   font-size: 25px;
-  color: #0d0e43;
+  color: #1A0B5B
 }
 
 .graphs-buttons {
@@ -2491,4 +2491,7 @@ template {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.victorypie-text {
+  color: #1A0B5B;
 }
